Ozhaev Zaynudin Game_2.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\game_2\Ozhaev Zaynudin Game_2.cpp: In function 'void MoveBall()':
C:\Users\zainu\Desktop\курс\game_2\Ozhaev Zaynudin Game_2.cpp:94:45: error: no matching function for call to 'Ball::Physics(int*, int*, int&)'
         ball1 .Physics (&score1, &score2, dt);
                                             ^
C:\Users\zainu\Desktop\курс\game_2\Ozhaev Zaynudin Game_2.cpp:94:45: note: candidate is:
C:\Users\zainu\Desktop\курс\game_2\Ozhaev Zaynudin Game_2.cpp:42:10: note: void Ball::Physics(int*, int*, int, int, int)
     void Physics (int* score1, int* score2, int ax, int ay, int dt);
          ^
C:\Users\zainu\Desktop\курс\game_2\Ozhaev Zaynudin Game_2.cpp:42:10: note:   candidate expects 5 arguments, 3 provided
C:\Users\zainu\Desktop\курс\game_2\Ozhaev Zaynudin Game_2.cpp:95:45: error: no matching function for call to 'Ball::Physics(int*, int*, int&)'
         ball2 .Physics (&score1, &score2, dt);
                                             ^
C:\Users\zainu\Desktop\курс\game_2\Ozhaev Zaynudin Game_2.cpp:95:45: note: candidate is:
C:\Users\zainu\Desktop\курс\game_2\Ozhaev Zaynudin Game_2.cpp:42:10: note: void Ball::Physics(int*, int*, int, int, int)
     void Physics (int* score1, int* score2, int ax, int ay, int dt);
          ^
C:\Users\zainu\Desktop\курс\game_2\Ozhaev Zaynudin Game_2.cpp:42:10: note:   candidate expects 5 arguments, 3 provided
C:\Users\zainu\Desktop\курс\game_2\Ozhaev Zaynudin Game_2.cpp:96:45: error: no matching function for call to 'Ball::Physics(int*, int*, int&)'
         ball3 .Physics (&score1, &score2, dt);
                                             ^
C:\Users\zainu\Desktop\курс\game_2\Ozhaev Zaynudin Game_2.cpp:96:45: note: candidate is:
C:\Users\zainu\Desktop\курс\game_2\Ozhaev Zaynudin Game_2.cpp:42:10: note: void Ball::Physics(int*, int*, int, int, int)
     void Physics (int* score1, int* score2, int ax, int ay, int dt);
          ^
C:\Users\zainu\Desktop\курс\game_2\Ozhaev Zaynudin Game_2.cpp:42:10: note:   candidate expects 5 arguments, 3 provided
C:\Users\zainu\Desktop\курс\game_2\Ozhaev Zaynudin Game_2.cpp:75:12: warning: unused variable 'ax' [-Wunused-variable]
     double ax = 0, ay = 0.5;
            ^
C:\Users\zainu\Desktop\курс\game_2\Ozhaev Zaynudin Game_2.cpp:75:20: warning: unused variable 'ay' [-Wunused-variable]
     double ax = 0, ay = 0.5;
                    ^
C:\Users\zainu\Desktop\курс\game_2\Ozhaev Zaynudin Game_2.cpp: In function 'void CollisionBall(Ball*, Ball*)':
C:\Users\zainu\Desktop\курс\game_2\Ozhaev Zaynudin Game_2.cpp:254:48: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
      double d = sqrt (Dx*Dx + Dy*Dy); if (d == 0) d = 0.01; // гипотенуза
                                                ^
C:\Users\zainu\Desktop\курс\game_2\Ozhaev Zaynudin Game_2.cpp:265:28: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
         if ((Vn1 - Vn2) == 0) Vn1 = Vn1 + 0.01;
                            ^
C:\Users\zainu\Desktop\курс\game_2\Ozhaev Zaynudin Game_2.cpp:279:44: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
         d = sqrt (Dx*Dx + Dy*Dy); if (d == 0) d=0.01;
                                            ^
---------------------------------------------------------------------------------------------
[27.06.2021 10:57:01,93 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\game_2> g++.exe "C:\Users\zainu\Desktop\курс\game_2\Ozhaev Zaynudin Game_2.cpp" -o "C:\Users\zainu\Desktop\курс\game_2\Ozhaev Zaynudin Game_2.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
